@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 17-05-2006 fixed: some small issues in file browser (directory history in root, selected item label missed a /).
  - 17-05-2006 fixed: Crash when reloading skins in certain situations.
  - 17-05-2006 fixed: [ 1489037 ] Changing skin breaks scan to db.
  - 17-05-2006 fixed: Startup window of "My Music" didn't work.
